# tbd-client

./: .clang-format  CMakeLists.txt  build_linux32.sh  build_win32.bat  main.cpp
cmake/: FindSDL2.cmake
include/logging/: Logger.h  LoggingPriority.h
res/: fragment_test.shader  vertex_test.shader
src/: main.cpp
src/engine/core/: Engine.cpp  Engine.h  Engine.hpp
src/engine/input/: InputSystem.cpp  InputSystem.hpp
src/engine/input/commands/: Command.hpp  CommandFormat.hpp  CommandFunc.cpp  CommandFunc.hpp  ICommand.hpp
src/engine/input/handlers/: IInputHandler.hpp
src/engine/input/strategies/: ICommandStrategy.hpp
src/engine/rendering/: Camera.cpp  Camera.hpp  RenderingSystem.cpp  RenderingSystem.h  RenderingSystem.hpp  Shader.cpp  Shader.hpp
src/logging/: Logger.cpp
